--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -1,6 +1,6 @@
 {
-  "appTitle": "spook_spiel",
+  "appTitle": "Spook - Das Spiel",
   "@appTitle": {
-    "description": "The title of the application"
+    "description": "Spiel im Thema des Spook Buchs"
   }
 }
